<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tunnel</name>
  <version>0.0.0</version>
  <description>Tunnel ROS interface</description>

  <maintainer email="peterpolidoro@gmail.com">Peter Polidoro</maintainer>

  <license>BSD</license>

  <author>Peter Polidoro</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>phidgets_python_api</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
